--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "granth2023-resume",
+  "name": "grant-cv",
   "version": "1.0.0",
   "description": "Resume_practice",
   "main": "index.js",
